tests/derive_macro_tests/invalid_field_bounds.stderr
error[E0277]: the trait bound `DoesNotImplementTrace: _::rust_cc::Trace` is not satisfied
 --> tests/derive_macro_tests/invalid_field_bounds.rs:5:10
  |
5 | #[derive(Trace, Finalize)]
  |          ^^^^^ the trait `_::rust_cc::Trace` is not implemented for `DoesNotImplementTrace`
  |
  = help: the following other types implement trait `_::rust_cc::Trace`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
  = note: this error originates in the derive macro `Trace` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DoesNotImplementTrace: _::rust_cc::Trace` is not satisfied
  --> tests/derive_macro_tests/invalid_field_bounds.rs:10:10
   |
10 | #[derive(Trace, Finalize)]
   |          ^^^^^ the trait `_::rust_cc::Trace` is not implemented for `DoesNotImplementTrace`
   |
   = help: the following other types implement trait `_::rust_cc::Trace`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: this error originates in the derive macro `Trace` (in Nightly builds, run with -Z macro-backtrace for more info)
